# analog-io

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
docs/: conf.py  index.md
docs/tutorials/: real-application.md
examples/: dataset_pipeline.py  example.py  find_files.py  impulse_response.py  measure_latency.py
src/analog_io/: core.py
src/example/: refraction.py
src/signal_generator/: __init__.py  core.py
tests/: test_core.py  test_snell.py
