[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analog_io"
version = "0.1.0"
description = "Analog I/O tools for Python"
authors = [{name = "Francesco Papaleo"}]
license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "soundfile",
  "sounddevice",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0",
  "pytest-cov",
]


[project.urls]
homepage = "https://github.com/francescopapaleo/analog-io"
repository = "https://github.com/francescopapaleo/analog-io"
documentation = "https://github.com/francescopapaleo/analog-io/docs"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .git
    | __pycache__
    | build
    | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
