[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal_generator"
version = "0.1.0"
description = "Generate audio signals"
authors = [{name = "Francesco Papaleo"}]
license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "flake8",
    "black",
    "mypy",
    "hatchling",
    "numpy",
    "scipy",
    "matplotlib",
    "soundfile",
]

[project.urls]
homepage = "https://github.com/francescopapaleo/signal-generator"
repository = "https://github.com/francescopapaleo/signal-generator"
documentation = "https://github.com/francescopapaleo/signal-generator/docs"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    .git
    | __pycache__
    | build
    | dist
)/
'''

[tool.pytest]
junit_family = "xunit2"
testpaths = ["tests"]

