[metadata]
name = analog_io
version = 0.1.0
description = Analog I/O tools for Python
author = Francesco Papaleo
license_file = LICENSE
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
url = https://github.com/francescopapaleo/analog-io
project_urls =
    Documentation = https://github.com/francescopapaleo/analog-io/docs
    Source Code = https://github.com/francescopapaleo/analog-io

[options]
python_requires = >=3.10
install_requires =
  numpy
  scipy
  soundfile
  sounddevice

[options.packages.find]
exclude =
    tests*

[tool:pytest]
junit_family = xunit2
testpaths = tests

[flake8]
exclude = .git,__pycache__,build,dist

[black]
line-length = 88
include = '\.pyi?$'
exclude = .git,__pycache__,build,dist
