[metadata]
name = signal_generator
version = 0.1.0
description = Generate audio signals
author = Francesco Papaleo
license_file = LICENSE
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
url = https://github.com/francescopapaleo/signal-generator
project_urls =
    Documentation = https://github.com/francescopapaleo/signal-generator/docs
    Source Code = https://github.com/francescopapaleo/signal-generator

[options]
python_requires = >=3.10
install_requires = 
    pytest
    flake8
    black
    mypy
    hatchling
    numpy
    scipy
    matplotlib
    soundfile

[options.packages.find]
exclude =
    tests*

[tool:pytest]
junit_family = xunit2
testpaths = tests

[flake8]
exclude = .git,__pycache__,build,dist

[black]
line-length = 88
include = '\.pyi?$'
exclude = .git,__pycache__,build,dist